--- a/nginx.conf
+++ b/nginx.conf
@@ -5,13 +5,13 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # 安全性標頭
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'";
+
     location / {
         try_files $uri $uri/ /index.html;
     }
-
-    # 安全標頭
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
 }
