--- a/nginx.conf
+++ b/nginx.conf
@@ -11,6 +11,9 @@ server {
     add_header X-Content-Type-Options "nosniff";
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'";
 
+    # 更嚴格的 CSP 設定
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self'; object-src 'none'; base-uri 'none'; form-action 'self'";
+
     location / {
         try_files $uri $uri/ /index.html;
     }
